--- a/dappnode_package.json
+++ b/dappnode_package.json
@@ -22,8 +22,7 @@
     "poa"
   ],
   "architectures": [
-    "linux/amd64",
-    "linux/arm64"
+    "linux/amd64"
   ],
   "links": {
     "homepage": "https://github.com/dappnode/DAppNodePackage-goerli-geth#readme",
