--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,8 +4,6 @@ services:
     image: "goerli-geth.dnp.dappnode.eth:0.4.9"
     build:
       context: ./build
-      args:
-        - UPSTREAM_VERSION=v1.9.24
     volumes:
       - "goerli:/goerli"
     ports:
@@ -14,6 +12,6 @@ services:
       - 30304/udp
     restart: always
     environment:
-      - "EXTRA_OPTS= --http.api eth,net,web3,txpool"
+      - "EXTRA_OPTS= --http.api eth,net,web3,txpool --nousb --cache.noprefetch"
 volumes:
   goerli: {}
